Adding Typescript verification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,42 @@
 name: Pokémon CI
+
 on: [push]
 
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
+    steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
 
       - name: Install dependencies
-        run: npm install
-
-      - name: Run Prettier to check formatting
-        run: npm run format:check
-        continue-on-error: false
-
-      - name: Run ESLint to check for linting errors
-        run: npm run lint
-        continue-on-error: false
-
-      - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}
+          npm install
 
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: TypeScript check
+        run: |
+          npx tsc --noEmit
+        continue-on-error: false
+
+      - name: Check formatting with Prettier
+        run: |
+          npm run format:check
+        continue-on-error: false
+
+      - name: Run ESLint
+        run: |
+          npm run lint
+        continue-on-error: false
+
+      - name: Build the project
+        run: |
+          npm run build
+        continue-on-error: false
+
+      - name: Preview the build
+        run: |
+          npm run preview
+        continue-on-error: false
+
+      - run: echo "🍏 The job's status is ${{ job.status }}."
