--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,34 +10,48 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          node-version: '17'
-          cache: 'npm'
+          ssh-private-key: ${{ secrets.SECRET_KEY }}
 
-      - name: Install dependencies
+      - name: Add server to known_hosts
         run: |
-          npm install
+          mkdir -p ~/.ssh
+          ssh-keyscan -H 51.178.29.201 >> ~/.ssh/known_hosts
 
-      - name: TypeScript check
-        run: |
-          npx tsc --noEmit
-        continue-on-error: false
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '17'
+      #     cache: 'npm'
 
-      - name: Check formatting with Prettier
-        run: |
-          npm run format:check
-        continue-on-error: false
+      # - name: Install dependencies
+      #   run: |
+      #     npm install
 
-      - name: Run ESLint
-        run: |
-          npm run lint
-        continue-on-error: false
+      # - name: TypeScript check
+      #   run: |
+      #     npx tsc --noEmit
+      #   continue-on-error: false
 
-      - name: Build the project
+      # - name: Check formatting with Prettier
+      #   run: |
+      #     npm run format:check
+      #   continue-on-error: false
+
+      # - name: Run ESLint
+      #   run: |
+      #     npm run lint
+      #   continue-on-error: false
+
+      # - name: Build the project
+      #   run: |
+      #     npm run build
+      #   continue-on-error: false
+      
+      - name: List files on remote server via SSH
         run: |
-          npm run build
-        continue-on-error: false
+          ssh -o StrictHostKeyChecking=no debian@51.178.29.201 "ls"
 
       - run: echo "🍏 The job's status is ${{ job.status }}."
